fix showcase carousel align

--- a/src/pages/LandingPageV3/style.css
+++ b/src/pages/LandingPageV3/style.css
@@ -520,6 +520,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
   padding-left: 4rem;
   padding-right: 4rem;
   gap: 2rem;
